[gd_scene load_steps=14 format=3 uid="uid://dt7g7frv2yrgc"]

[ext_resource type="Script" path="res://Towers/Bomb/Bomb.gd" id="1_yn7a8"]
[ext_resource type="Texture2D" uid="uid://cr374bja6kq8s" path="res://Assets/circle.png" id="2_fj6i8"]
[ext_resource type="PackedScene" uid="uid://bpgnu2upkwuox" path="res://Towers/Bomb/Explosion.tscn" id="2_t00ax"]
[ext_resource type="Texture2D" uid="uid://bkw8tbismackx" path="res://Assets/evilcannonball.png" id="3_tkw0t"]
[ext_resource type="Shader" path="res://DefaultDude.gdshader" id="4_rqn5h"]
[ext_resource type="StyleBox" uid="uid://ruchrnlx762e" path="res://InvalidPlacement.tres" id="5_1177e"]
[ext_resource type="PackedScene" uid="uid://ceh3il5apv881" path="res://Towers/TowerBackpack.tscn" id="7_lscpe"]
[ext_resource type="Script" path="res://Towers/TowerOptions.gd" id="7_q4bpv"]
[ext_resource type="Texture2D" uid="uid://bdoc6lha2tpi5" path="res://Assets/backpack.png" id="8_fsaqo"]
[ext_resource type="Texture2D" uid="uid://b7k4d4uoey1ly" path="res://Assets/money.png" id="9_yi8jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsmjf"]
size = Vector2(109, 110)

[sub_resource type="CircleShape2D" id="CircleShape2D_suh6q"]
radius = 66.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_53501"]
shader = ExtResource("4_rqn5h")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 4.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true

[node name="Bomb" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_yn7a8")
Name = "Bomb"
projectile = ExtResource("2_t00ax")
Ground = false
Path = true

[node name="TowerShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_tsmjf")

[node name="BulletOrigin" type="Marker2D" parent="."]

[node name="BulletRange" type="Area2D" parent="."]

[node name="BulletRangeShape" type="CollisionShape2D" parent="BulletRange"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_suh6q")

[node name="BulletRangeVisual" type="Sprite2D" parent="."]
modulate = Color(0.0588235, 1, 1, 0.368627)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_fj6i8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_tkw0t")

[node name="OutlineShader" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_53501")
scale = Vector2(2, 2)
texture = ExtResource("3_tkw0t")

[node name="BulletCooldown" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.694118)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -58.0
offset_right = 57.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("5_1177e")
metadata/_edit_use_anchors_ = true

[node name="TowerMenu" type="Panel" parent="." node_paths=PackedStringArray("tower")]
offset_left = -36.0
offset_top = -122.0
offset_right = 36.0
offset_bottom = -77.0
script = ExtResource("7_q4bpv")
tower = NodePath("..")

[node name="HBoxContainer" type="HBoxContainer" parent="TowerMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -22.0
offset_right = 41.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
alignment = 2

[node name="BackpackButton" type="TextureButton" parent="TowerMenu/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("8_fsaqo")
ignore_texture_size = true
stretch_mode = 5

[node name="SellButton" type="TextureButton" parent="TowerMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("9_yi8jv")
ignore_texture_size = true
stretch_mode = 5

[node name="ThirdButton" type="TextureButton" parent="TowerMenu/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("8_fsaqo")
ignore_texture_size = true
stretch_mode = 5

[node name="EquipMenu" parent="." node_paths=PackedStringArray("tower") instance=ExtResource("7_lscpe")]
visible = false
offset_left = -146.0
offset_top = 64.0
offset_right = 147.0
offset_bottom = 131.0
tower = NodePath("..")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TowerMenu/HBoxContainer/BackpackButton" to="TowerMenu" method="_on_backpack_button_pressed" flags=18]
[connection signal="pressed" from="TowerMenu/HBoxContainer/SellButton" to="TowerMenu" method="_on_sell_button_pressed" flags=18]
[connection signal="pressed" from="TowerMenu/HBoxContainer/ThirdButton" to="TowerMenu" method="_on_third_button_pressed" flags=18]
